fixed close button for modal on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -179,7 +179,7 @@ a.email {
 
 /* descriptionModal styling */
 
-#descriptionModalBody {
+#descriptionModalBodyContent {
   background-color: rgb(229, 234, 238);
 }
 
